--- a/style.css
+++ b/style.css
@@ -20,6 +20,22 @@ button {
     border: none;
     border-radius: 0.25rem;
     cursor: pointer;
-    opacity: 0.9;
+    opacity: 0.5;
     font-size: 1rem;
+}
+
+#open_modal {
+    background-color: #007;
+}
+
+button:hover {
+    opacity: 1;
+}
+
+#fade {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
