--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ button {
     border: none;
     border-radius: 0.25rem;
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0.7;
     font-size: 1rem;
 }
 
@@ -38,4 +38,37 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 5;
+}
+
+#modal {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    z-index: 10;
+    width: 500px;
+    max-width: 90%;
+    padding: 1.2rem;
+    border-radius: 0.5rem;
+    text-align: justify;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+}
+
+.modal-body {
+    margin-bottom: 1rem;
+}
+
+#modal.hide, #fade.hide {
+    opacity: 0;
 }
